@@ -22,9 +22,7 @@ sa_config()
         chmod 0644 /etc/cron.d/sa-update
         perl -pi -e 's/#(10.*)/${1}/' /etc/cron.d/sa-update
     elif [ X"${DISTRO}" == X"UBUNTU" -o X"${DISTRO}" == X"DEBIAN" ]; then
-        perl -pi -e 's#^(CRON=)0#${1}1#' /etc/cron.daily/spamassassin
-    else
-        :
+        perl -pi -e 's#^(CRON=)0#${1}1#' /etc/default/spamassassin
     fi
 
     if [ X"${DISTRO}" == X"FREEBSD" ]; then
