@@ -1,9 +1,12 @@
 iRedMail-0.9.0:
     * Improvement:
+        - MariaDB support is now available on FreeBSD.
         - New index in `amavisd` database for SQL column `policy.policy_name`.
           Required by iRedAdmin-Pro self-service.
 
     * Fixed:
+        - Not enable cron job to update SpamAssassin rules in file
+          /etc/default/spamassassin (CRON=1).
         - Incorrect quota dict name in Dovecot quota warning script.
         - Decrease number of pre-forked Amavisd processes to 4 to reduce
           memory usage.
